apps/files/css/files.scss
/* ... */
#fileList td a {
	a.action {
		display: inline;
		padding: 17px 8px;
		line-height: 50px;
		opacity: .3;
		&.action-share {
			padding: 17px 14px;
			&.permanent:not(.shared-style) .icon-shared + span {
				/* hide text of the share action */
				/* .hidden-visually for accessbility */
				position: absolute;
				left:-10000px;
				top: auto;
				width: 1px;
				height: 1px;
				overflow: hidden;
			}
			.avatar {
				display: inline-block;
				vertical-align: middle;
			}
		}
		&.action-menu {
			padding-top: 17px;
			padding-bottom: 17px;
			padding-left: 14px;
			padding-right: 14px;
		}
		&.no-permission {
			&:hover, &:focus {
				opacity: .3;
			}
		}
		&.disabled {
			&:hover, &:focus,
			img {
				opacity: .3;
			}
			&.action-download {
				opacity: .7;
				&:hover, &:focus {
					opacity: .7;
				}
			}
		}
		&:hover, &:focus {
			opacity: .7;
		}
	}
	.fileActionsMenu a.action, a.action.action-share.shared-style {
		opacity: .7;
	}
	.fileActionsMenu .action.permanent {
		opacity: 1;
	}
}

// Ellipsize long sharer names
#fileList .action.action-share.permanent.shared-style span:not(.icon) {
	display: inline-block;
	max-width: 70px;
	overflow: hidden;
	text-overflow: ellipsis;
	vertical-align: middle;
	margin-left: 6px;
}

#fileList .remoteAddress .userDomain {
	margin-left: 0 !important;
}

#fileList .favorite-mark.permanent {
	opacity: 1;
}

#fileList .fileActionsMenu a.action:hover,
#fileList .fileActionsMenu a.action:focus,
/* show share action of shared items darker to distinguish from non-shared */
#fileList a.action.action-share.shared-style:hover,
#fileList a.action.action-share.shared-style:focus {
	opacity: 1;
}

#fileList tr a.action.disabled {
	background: none;
}

#selectedActionsList a.download.disabled,
#fileList tr a.action.action-download.disabled {
	color: #000000;
}

#fileList tr:hover a.action.disabled:hover * {
	cursor: default;
}

.summary {
	opacity: .3;
	/* add whitespace to bottom of files list to correctly show dropdowns */
	height: 250px;
}
#filestable .filesummary {
	width: 100%;
}
/* Less whitespace needed on link share page
 * as there is a footer and action menus have fewer entries.
 */
#body-public .summary {
	height: 180px;
}
.summary:hover,
.summary:focus,
.summary,
table tr.summary td {
	background-color: transparent;
}
.summary td {
	border-bottom: none;
	vertical-align: top;
	padding-top: 20px;
}
.summary .info {
	margin-left: 2px;
}
.hiddeninfo {
	white-space: pre-line;
}

table.dragshadow {
	width:auto;
	z-index: 2000;
}
table.dragshadow td.filename {
	padding-left:60px;
	padding-right:16px;
	height: 36px;

	/* Override "max-width: 0" to prevent file name and size from overlapping */
	max-width: unset;
}
table.dragshadow td.size {
	padding-right:8px;
}
.mask {
	z-index: 50;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: var(--color-main-background);
	background-repeat: no-repeat no-repeat;
	background-position: 50%;
	opacity: 0.7;
	transition: opacity 100ms;
	-moz-transition: opacity 100ms;
	-o-transition: opacity 100ms;
	-ms-transition: opacity 100ms;
	-webkit-transition: opacity 100ms;
}
.mask.transparent{
	opacity: 0;
}

.newFileMenu {
	font-weight: 300;
	top: 100%;
	margin-top: 4px;
	min-width: 100px;
	margin-left: 22px; /* Align left edge below center of + button … */
	transform: translateX(-50%); /* … then center it below button */
	z-index: 1001;

	/* Center triangle */
	&::after {
		left: calc(50% - 8px) !important;
	}
}

#filestable .filename .action .icon,
#filestable .selectedActions a .icon,
#filestable .filename .favorite-mark .icon,
#controls .actions .button .icon {
	display: inline-block;
	vertical-align: middle;
	background-size: 16px 16px;
}

#filestable .filename .favorite-mark {
	// Override default icons to always hide the star icon and always show the
	// starred icon even when hovered or focused.
	& .icon-star {
		background-image: none;
	}
	& .icon-starred {
		@include icon-color('star-dark', 'actions', $color-yellow, 1, true);
	}
}

#filestable .filename .action .icon.hidden,
#filestable .selectedActions a .icon.hidden,
#controls .actions .button .icon.hidden {
	display: none;
}

#filestable .filename .action .icon.loading,
#filestable .selectedActions a .icon.loading,
#controls .actions .button .icon.loading {
	width: 15px;
	height: 15px;
}

.app-files .actions .button.new {
	position: relative;
}

.breadcrumb .canDrop > a,
#filestable tbody tr.canDrop {
	background-color: rgba( $color-primary, .3 );
}
.dropzone-background {
	background-color: rgba( $color-primary, .3 );
	:hover{
		box-shadow: none !important;
	}
}

.notCreatable {
	padding-left: 12px;
	padding-top: 12px;
	color: var(--color-text-lighter);
}

#quota {
	margin: 0 !important;
	border: none;
	border-radius: 0;
	background-color: transparent;
	z-index:1;

	> a[href='#'] {
		// if no link is set, no mouse feedback
		box-shadow: none !important;
		&, * {
			cursor: default !important;
		}
	}

	.quota-container {
		height: 5px;
		border-radius: var(--border-radius);

		div {
			height: 100%;
			background-color: var(--color-primary);
		}
	}
}

#quotatext {
	padding: 0;
	height: 30px;
	line-height: 30px;
}
/* ... */

